Fixed general alignment

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,9 +1,43 @@
 body {
-    display: flex;
+    display: block;
+    width: 1920px;
+    height: 1080px;
+    margin: 0;
 }
 
 div {
+    float: left;
+}
+
+#top_bar {
+    width: 100%;
+    height: 80px;
+    background-color: lightgray;
+}
+
+#idioms {
+    width: 100%;
+    height: auto;
     display: inline-block;
+}
+
+#word_cloud_container {
+    width: 600px;
+    height: 500px;
+}
+
+#dot_plot_container {
+    width: 600px;
+    height: 500px;
+}
+
+#barcharts {
+    width: 720px;
+    height: 1000px;
+}
+
+#barchats_title, #small_multiples {
+    float: none;
 }
 
 .tag-container{
